<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlQuestions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csquestionapp.QuestionsActivity">

    <com.example.csquestionapp.BackgroundColor
        android:id="@+id/bgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/dispName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/accent_material_light"
        android:layout_above="@+id/tvQue"
        android:layout_marginBottom="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/answersGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dispName"
        android:clickable="true"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:checked="false"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextQuestion"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/answersGrp"
        android:layout_alignParentEnd="true"
        android:background="#FF5722"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignParentEnd="true"
        android:background="#01579B"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvQue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questions"
        android:layout_marginBottom="52dp"
        android:layout_above="@+id/answersGrp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvYourScore"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
        android:text="@string/your_score"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textAppearance="@color/abc_background_cache_hint_selector_material_dark"
        android:text="@string/text_0"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:textAlignment="center"
        android:layout_marginStart="125dp"/>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#1991D0"
        app:drawableTopCompat="@drawable/ic_timer" />

</RelativeLayout>
