<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlDeveloper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csquestionapp.DeveloperActivity">

    <com.example.csquestionapp.BackgroundColor
        android:id="@+id/bgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tvDev"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developers"
        android:layout_marginTop="33dp"
        android:textSize="60sp"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:background="@drawable/headline_shape"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:background="#01579B"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDev"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="23dp"
        android:text="@string/shaked"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:text="@string/matan"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>
